@@ -861,21 +861,21 @@ CAPTION "Edit Entry"
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
     LTEXT           "To edit this entry from the current password file, simply make the desired changes in the fields below.  Note that at least a title and a password are required.",IDC_EDITEXPLANATION,6,7,271,19
-    LTEXT           "Group:",IDC_STATIC,6,36,22,8
+    LTEXT           "Group:",IDC_STATIC_GROUP,6,36,22,8,SS_NOTIFY
     COMBOBOX        IDC_GROUP,52,34,109,128,CBS_DROPDOWN | CBS_AUTOHSCROLL | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "&Title:",IDC_STATIC,6,52,16,8
+    LTEXT           "&Title:",IDC_STATIC_TITLE,6,52,16,8,SS_NOTIFY
     EDITTEXT        IDC_TITLE,52,49,109,14,ES_AUTOHSCROLL | ES_WANTRETURN
-    LTEXT           "&Username:",IDC_STATIC,6,68,35,8
+    LTEXT           "&Username:",IDC_STATIC_USERNAME,6,68,35,8,SS_NOTIFY
     EDITTEXT        IDC_USERNAME,52,65,109,14,ES_AUTOHSCROLL | ES_WANTRETURN
-    LTEXT           "&Password:",IDC_STATIC,6,84,34,8
+    LTEXT           "&Password:",IDC_STATIC_PASSWORD,6,84,34,8,SS_NOTIFY
     EDITTEXT        IDC_PASSWORD,52,81,109,14,ES_PASSWORD | ES_AUTOHSCROLL | ES_WANTRETURN
-    LTEXT           "Con&firm Password:",IDC_STATIC,6,96,34,16
+    LTEXT           "Con&firm Password:",IDC_STATIC_CONFPSWD,6,96,34,16,SS_NOTIFY
     EDITTEXT        IDC_PASSWORD2,52,98,109,14,ES_PASSWORD | ES_AUTOHSCROLL | ES_WANTRETURN | WS_DISABLED
-    LTEXT           "&Notes:",IDC_STATIC,6,115,22,8
+    LTEXT           "&Notes:",IDC_STATIC_NOTES,6,115,22,8,SS_NOTIFY
     EDITTEXT        IDC_NOTES,52,114,152,96,ES_MULTILINE | ES_AUTOVSCROLL | ES_AUTOHSCROLL | ES_WANTRETURN | WS_VSCROLL | WS_HSCROLL
-    LTEXT           "U&RL:",IDC_STATIC_URL,6,223,18,8
+    LTEXT           "U&RL:",IDC_STATIC_URL,6,223,18,8,SS_NOTIFY
     EDITTEXT        IDC_URL,52,221,152,14,ES_AUTOHSCROLL | ES_WANTRETURN
-    LTEXT           "&Autotype:",IDC_STATIC_AUTO,6,241,31,8
+    LTEXT           "&Autotype:",IDC_STATIC_AUTO,6,241,31,8,SS_NOTIFY
     EDITTEXT        IDC_AUTOTYPE,52,238,109,14,ES_AUTOHSCROLL | ES_WANTRETURN
     DEFPUSHBUTTON   "OK",IDOK,212,33,64,14
     PUSHBUTTON      "Cancel",IDCANCEL,212,49,64,14
